Added Lean syntax file

--- a/config.toml
+++ b/config.toml
@@ -14,6 +14,8 @@ highlight_code = true
 # Whether to build a search index to be used later on by a JavaScript library
 build_search_index = true
 
+extra_syntaxes = ["syntaxes"]
+
 [extra]
 # Put all your custom variables here
 debug = false
