--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # The URL the site will be built for
-base_url = "https://lectures.alex.balgavy.eu"
+base_url = "lectures.alex.balgavy.eu"
 title = "Lecture Notes"
 description = "My lecture notes. Primarily for myself, maybe useful for others."
 default_language = "en"
@@ -14,7 +14,7 @@ build_search_index = true
 # Whether to do syntax highlighting
 # Theme can be customised by setting the `highlight_theme` variable to a theme supported by Zola
 highlight_code = true
-extra_syntaxes = ["syntaxes"]
+extra_syntaxes_and_themes = ["syntaxes"]
 
 smart_punctuation = true
 
